--- a/personal_portfolio/assignment_1/more.html
+++ b/personal_portfolio/assignment_1/more.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./assets/images/logo-2.png" alt="Logo" class="logo" />
+      <img src="./assets/images/logo.png" alt="Logo" class="logo" />
       <nav class="nav">
         <ul class="nav-list">
           <li class="nav-item">
