--- a/src/about.html
+++ b/src/about.html
@@ -51,7 +51,7 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="" alt="Feven's Portrait" class="about-img" />
+          <img src="./images/cluttered-desk.webp" alt="Feven's Portrait" class="about-img" />
         </div>
       </section>
     </main>
