fixed bugs - portfolio

--- a/src/education.html
+++ b/src/education.html
@@ -31,7 +31,7 @@
     </header>
     <main class="main">
       <h1 class="main-heading">Educational Background and Skills</h1>
-      <section class="education">
+      <div class="education">
         <img
           src="./images/paper.png"
           alt="Educational Journey"
@@ -49,8 +49,8 @@
           extra courses and working on projects that challenge me to think and
           grow.
         </p>
-      </section>
-      <section class="experience">
+      </div>
+      <div class="experience">
         <article class="experience-item">
           <img
             src="./images/evangadi_logo.jpg"
@@ -111,7 +111,7 @@
             </li>
           </ul>
         </article>
-      </section>
+      </div>
       <section class="skills">
         <h2 class="skills-heading">Technical Skills</h2>
         <table class="skills-table">
