--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         >
       </div>
       <audio controls class="audio-player">
-        <source src="./audio/Self Control - Justice Der.mp3" type="audio/mp3" />
+        <source src="./audio/Self_Control.mp3" type="audio/mp3" />
         Your browser does not support the audio element.
       </audio>
     </main>
